--- a/css/principal.css
+++ b/css/principal.css
@@ -3,7 +3,31 @@
 }
 .jumbotron{
     background-color: rgb(189, 50, 7);
-    color: #ffffff;
+    /*color: #ffffff;*/
+    background-image: url(../img/B03.jpg);
+    height: 50vh;
+    background-size: cover;
+    background-position: top center;
+    color:white;
+    text-align: center;
+    padding-top: 150px;
+    text-shadow: 1px 2px rgb(160, 160, 160);
+}
+
+.jumbotron-seccion {
+    background-image: url(../img/B02.jpg);
+    height: 30vh;
+    background-size: cover;
+    background-position: top center;
+    margin-block-end: 20px;
+    color:rgb(0, 0, 0);
+    padding-top: 130px;
+    text-shadow: 2px 3px rgb(255, 255, 255);
+    text-align: center;
+}
+.jumbotron-contacto {
+    background-image: url(../img/B03.jpg);
+     
 }
 
 footer{
@@ -13,9 +37,18 @@ footer{
     margin-bottom: 0px;
     margin-top: 30px;
 }
-footer a{
-color: #ffffff;
-}
+footer a {
+    color: #ffffff;
+    }
+
+    footer a:hover{
+        color: #ffffff;
+        font-weight: bold;
+    }
+    footer i:hover{
+        color: #fbeb00;
+        font-weight: bold;
+    }
 
 .card-design {
     flex: 1 250px;
